--- a/SPRINT4/Sobre/css/sobre.css
+++ b/SPRINT4/Sobre/css/sobre.css
@@ -357,3 +357,33 @@ section {
 .collapsed .menu ul li .menu-text {
   display: none;
 }
+
+.profile-icon {
+  position: absolute;
+  bottom: 5rem;
+  right: 2rem;
+  font-size: 3rem;
+  color: var(--clr-background);
+  cursor: pointer;
+  transition: transform 0.2s ease;
+}
+
+.profile-icon:hover {
+  transform: scale(1.1);
+  color: var(--clr-button);
+}
+
+.sidebar.collapsed .profile-icon {
+  position: fixed;            /* tira do fluxo normal */
+  top: auto;                  /* cancela qualquer top anterior */
+  bottom: calc(
+    1.8rem    /* distância do switch ao bottom */
+    + 2rem    /* altura do track do switch */
+    + 0.5rem  /* gap extra entre switch e ícone */
+  );
+  left: 2rem;                 /* mesma left do switch */
+  right: auto;                /* cancela qualquer right anterior */
+  font-size: 2.5rem;          /* se quiser reduzir um pouco */
+  z-index: 11;                /* acima do switch */
+  transition: var(--transition);
+}
